# Automic-Bootstrap

./: .gitignore  Makefile  README.md  README_ADDON.md  Taskfile.yml  ae.crt  aedb_check.sql  aedb_post_install_check.sh  aedb_quick.sql  bkup.py  build.ps1  cleanup.py  cli_fixed_verifydb.py  cli_preflight_patch.diff  cli_verifydb_patch.diff  create_aedb.sh  create_aedb.sql  fix-classpath.sh  fix-ucsrv.sh  penispoop.txt  pg_boot.sh  preflight.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  scan_report.json  setup_venv.ps1  setup_venv.sh  uc4.config.xml
.github/workflows/: ci.yml
artifacts/_unused_backup_20250819_205735/: Standard.css  ucybchng  ucybchng.ori.ini  ucybdbar  ucybdbar.ori.ini  ucybdbar.sh  ucybdbcc.ori.ini  ucybdbcc.sh  ucybdbld.ori.ini  ucybdbld.sh  ucybdbre.ori.ini  ucybdbre.sh  ucybdbrr  ucybdbrr.ori.ini  ucybdbrt  ucybdbrt.ori.ini  ucybdbun.ori.ini  ucybdbun.sh
automic_bootstrap/: cli.py  cli.py.bak  config.py  logging_setup.py
automic_bootstrap/automic_bootstrap/: logging_setup.py
automic_bootstrap/automic_bootstrap/components/: ae_engine.py  backup.py  db_load.py  service_manager.py
automic_bootstrap/aws/: ec2.py
automic_bootstrap/components/: ae_engine.py  ae_lite.py  aedb.py  awi.py  backup.py  db_load.py  service_manager.py  transfer.py  utils.py  verify.py
automic_bootstrap/orchestrators/: deprovision.py  stack.py  stages.py
automic_bootstrap/remote/: __init__.py  commands.py  sftp.py  ssh.py
automic_bootstrap/tools/: preflight_entry.py
tests/: test_preflight.py
tmp/: aedb_post_install_check.sh
(+1 files in other folders)
