[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automic-bootstrap"
version = "0.1.2"
description = "Modular Automic AWS bootstrap (AEDB, AE, AWI)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["boto3>=1.28", "paramiko>=3.3", "jinja2>=3.1"]

[project.scripts]
automic-bootstrap = "automic_bootstrap.cli:main"

# 👇 Add this block to enable package discovery
[tool.setuptools.packages.find]
where = ["automic_bootstrap"]
include = ["automic_bootstrap*"]
