[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automic-bootstrap"
version = "0.1.0"
description = "AWS bootstrapper for Broadcom Automic (provision + install pipeline)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
keywords = ["automic", "aws", "bootstrap", "automation"]

dependencies = [
    "boto3",
    "botocore",
    "paramiko",
    "Jinja2",
    # Optional: uncomment if you add them
    # "psycopg2-binary",
    # "requests",
    # "rich",
]

[project.scripts]
automic-bootstrap = "automic_bootstrap.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"
